Fixed a font issue on ios safari with font smoothing/weight

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -12,6 +12,8 @@ Base styles
 - - - - - */
 * {
   box-sizing: border-box;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-text-stroke: 1px transparent;
 }
 
 body, html {
